Add subtotals to table and add a clear button to the order creator.

--- a/public/global.css
+++ b/public/global.css
@@ -39,6 +39,7 @@ input, button, select, textarea {
 	box-sizing: border-box;
 	border: 0px solid #ccc;
 	border-radius: 10px;
+	filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
 }
 
 input:disabled {
